--- a/package.json
+++ b/package.json
@@ -1,13 +1,38 @@
 {
   "name": "satyums-pathania-dark",
-  "displayName": "SatyumS Pathania Dark",
+  "displayName": "VagaBond Dark",
   "description": "My first dark theme as all the explored themes  I found was boring!! T_T",
+  "publisher": "SatyumSinghPathania",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.89.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Satyum-Singh/satyums-pathania-dark.git"
+  },
   "categories": [
     "Themes"
+  ],
+  "keywords": [
+    "theme",
+    "dark",
+    "color",
+    "vscode",
+    "dark-theme",
+    "satyum",
+    "satyum-singh",
+    "pathania",
+    "satyums-pathania-dark",
+    "aesthetic",
+    "soothing",
+    "vagabond",
+    "purple",
+    "violet",
+    "calm",
+    "cool",
+    "peaceful",
+    "relaxing"
   ],
   "contributes": {
     "themes": [
